<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pearl"
    android:orientation="vertical"
    tools:context=".cards.Cards">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center">

            <TextView
                android:id="@+id/text_view_count_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textColor="@color/primary_font_color"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="?attr/colorPrimary" />

        <LinearLayout
            android:id="@+id/mana_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:clickable="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_view_mana_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mana"
                android:textColor="@color/primary_font_color"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <GridView
        android:id="@+id/list_view_cards"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="auto_fit"
        android:columnWidth="110dp"
        android:stretchMode="columnWidth" />

    <!--<ListView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:id="@+id/list_view_cards"/>-->

</LinearLayout>
