...
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:src="@drawable/mana_7"
            android:background="@drawable/shape"/>

        <ImageView
            android:id="@+id/seven_plus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:src="@drawable/mana_7_plus"
            android:background="@drawable/shape"/>

        <ImageView
            android:id="@+id/all"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:src="@drawable/all_cards"
            android:tint="@color/primary_font_color"
            android:background="@drawable/shape"/>

    </LinearLayout>

</LinearLayout>
...
