...
            android:layout_column="1"
            android:layout_row="0">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_cards"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="?attr/colorPrimaryDark"
                android:scaleType="fitCenter"
                android:src="@drawable/all_cards" />

            <TextView
...
